bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value getIndication
  if (getIndication()=='R'){
      ^BDR:7: error: not found: value getIndication
  if (getIndication()=='L'){
      ^BDR:11: error: not found: value getIndication
  if (getIndication()=='I'){
      ^BDR:16: error: not found: value getIndication
  if (getIndication()=='A'){
      ^