bdr.BDR.scala.code
var finished:Int=0
while (finished==0){
  if (getIndication()=='R'){
    left();
    forward();
  }
  if (getIndication()=='L'){
    right();
    forward();
  }
  if (getIndication()=='I'){
    left();
    left();
    forward();
  }
  if (getIndication()=='A'){
    forward();
  }
  finished=1
}